<resources>
    <string name="app_name">ExternalStorageDemo</string>
    <string name="text_view_data">Nhập dữ liệu lưu trữ</string>
    <string name="edit_text_data">Thông tin lưu trữ</string>
    <string name="view_button">View Data</string>
    <string name="save_button_public">Save Publicly</string>
    <string name="save_button_private">Save Privately</string>

    <string name="text_view_saved_data">Dữ liệu lưu trữ</string>
    <string name="saved_information">Click để xem thông tin lưu trữ</string>
    <string name="back_button">Go Back</string>
    <string name="show_button_public">Public Data</string>
    <string name="show_button_private">Private Data</string>
</resources>