<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:paddingTop="50dp"
    tools:context=".ViewInformationActivity">

    <TextView
        android:id="@+id/textView_saved_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_view_saved_data"
        android:textSize="20sp"
        android:layout_marginTop="100dp"
        android:textAllCaps="true"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView_get_saved_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:textSize="20sp"
        android:hint="@string/saved_information" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/showButton_public"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_layout"
            android:onClick="showPublicData"
            android:padding="8dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/show_button_public"
            android:textAllCaps="false"
            android:textColor="@color/textColor"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/showButton_private"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_layout"
            android:onClick="showPrivateData"
            android:padding="8dp"
            android:text="@string/show_button_private"
            android:textAllCaps="false"
            android:textColor="@color/textColor"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/goBackButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_layout"
            android:onClick="back"
            android:padding="8dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:text="@string/back_button"
            android:textAllCaps="false"
            android:textColor="@color/textColor"
            app:backgroundTint="@null" />
    </LinearLayout>
</LinearLayout>