<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:paddingTop="50dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/text_view_data"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:hint="@string/edit_text_data"
        android:inputType="textMultiLine"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/saveButton_public"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_layout"
            android:onClick="savePublicly"
            android:padding="8dp"
            android:layout_marginRight="5dp"
            android:text="@string/save_button_public"
            android:textAllCaps="false"
            android:textColor="@color/textColor"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/saveButton_private"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_layout"
            android:onClick="savePrivately"
            android:padding="8dp"
            android:text="@string/save_button_private"
            android:textAllCaps="false"
            android:textColor="@color/textColor"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/viewButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_layout"
            android:onClick="viewInformation"
            android:padding="8dp"
            android:layout_marginLeft="5dp"
            android:text="@string/view_button"
            android:textAllCaps="false"
            android:textColor="@color/textColor"
            app:backgroundTint="@null" />

    </LinearLayout>

</LinearLayout>